[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Skeleton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.1969, 37.2423 )

[node name="Skeleton" type="Node2D"]
script = ExtResource( 2 )

[node name="Joint0" type="Position2D" parent="."]

[node name="UpperSprite" type="Sprite" parent="Joint0"]
texture = ExtResource( 1 )
offset = Vector2( 25, 0 )

[node name="Joint1" type="Position2D" parent="Joint0"]
position = Vector2( 50, 0 )

[node name="LowerSprite" type="Sprite" parent="Joint0/Joint1"]
texture = ExtResource( 1 )
offset = Vector2( 25, 0 )

[node name="Joint2" type="Position2D" parent="Joint0/Joint1"]
position = Vector2( 50, 0 )

[node name="Hand" type="Area2D" parent="Joint0/Joint1/Joint2"]

[node name="HandCollision" type="CollisionShape2D" parent="Joint0/Joint1/Joint2/Hand"]
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="HandSprite" type="Sprite" parent="Joint0/Joint1/Joint2/Hand"]
texture = ExtResource( 1 )
[connection signal="input_event" from="Joint0/Joint1/Joint2/Hand" to="." method="_on_Hand_input_event"]
